--- a/CampusSolutions/Home/templates/studentDashboard.html
+++ b/CampusSolutions/Home/templates/studentDashboard.html
@@ -133,7 +133,7 @@
             <div class="card-body">
               <h5 class="card-title">Previous Year Questions</h5>
               <p class="card-text">Access previous years' question papers.</p>
-              <a href="show/Pyq" class="btn btn-primary">View PYQs</a>
+              <a href="{% url 'showPyq'%}" class="btn btn-primary">View PYQs</a>
             </div>
           </div>
         </div>
