--- a/CampusSolutions/Home/templates/login.html
+++ b/CampusSolutions/Home/templates/login.html
@@ -87,9 +87,11 @@
           <a href="#">Forgot Password?</a>
         </div>
         <button type="submit" class="btn btn-custom w-100">Login</button>
+        
         <p class="signup-link text-center mt-3">
-          Don't have an account? <a href="#">Sign up</a>
+          Don't have an account? <a href="/student/signup/">Sign up</a>
         </p>
+        
       </form>
     </div>
 
