ai chatbot added

--- a/CampusSolutions/Home/templates/Dashboard.html
+++ b/CampusSolutions/Home/templates/Dashboard.html
@@ -252,6 +252,15 @@
             </div>
           </div>
         </div>
+        <div class="col-md-4">
+          <div class="card text-center">
+            <div class="card-body">
+              <h5 class="card-title">ByteBanter</h5>
+              <p class="card-text">Ask the AI</p>
+              <a href="/chatbot" class="btn btn-primary">Ask Anything</a>
+            </div>
+          </div>
+        </div>
         {% endif %}
       </div>
     </div>
