minor bug fixes

--- a/CampusSolutions/Home/templates/Dashboard.html
+++ b/CampusSolutions/Home/templates/Dashboard.html
@@ -320,9 +320,9 @@
         <div class="col-md-4">
           <div class="card text-center">
             <div class="card-body">
-              <h5 class="card-title">StudyBuddy</h5>
+              <h5 class="card-title">Co-Study</h5>
               <p class="card-text">Join the Study Rooms for clearing Doubts.</p>
-              <a href="/studybuddy/home" class="btn btn-primary">StudyBuddy</a>
+              <a href="/studybuddy/home" class="btn btn-primary">Co-Study</a>
             </div>
           </div>
         </div>
